--- a/.github/build.yml
+++ b/.github/build.yml
@@ -27,10 +27,5 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Install dependecies
-        run: sudo apt-get install qt5-default
-      
-      # Runs a set of commands using the runners shell
-      - name: build project
-        run: |
-          qmake -o Makefile WindowBase.pro,
-          make.
+        run: echo "Hello, world!"
+          
