--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -21,5 +21,5 @@ jobs:
         
     - name: build project
       run: |
-        qmake -o Makefile your_project.pro
+        qmake -o Makefile WindowBase.pro
         make
